log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output-writer
          image: lonias/log-output-writer:0.0.5
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
        - name: log-output-reader
          image: lonias/log-output-reader:0.1.3
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
              ephemeral-storage: "128Mi"
